--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ En el año 1990 fue llamado para formar parte de la banda de grunge Nirvana, la 
           </h1>
         </div>
         <div class="container-fluid cajas">
-          <form class="container ">
+          <form netlify class="container ">
             <div class="form-row arroba">
               <div class="col-8">
                 <input type="text" class="form-control" placeholder="Nombre">
