--- a/index.html
+++ b/index.html
@@ -199,13 +199,17 @@ En el año 1990 fue llamado para formar parte de la banda de grunge Nirvana, la 
           <form netlify class="container ">
             <div class="form-row arroba">
               <div class="col-8">
-                <input type="text" class="form-control" placeholder="Nombre">
+                <input type="text" class="form-control" name="Nombre"
+                       placeholder="Nombre"
+                       
+                       >
               </div>
               <div class="container-fluid">
                 <br>
             </div>
               <div class="col-8">
-                <input type="text" class="form-control" placeholder="Mensaje">
+                <input type="text" class="form-control" name="Mensaje"
+                       placeholder="Mensaje">
               </div>
             </div>
             <div class="container-fluid">
