--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ En el año 1990 fue llamado para formar parte de la banda de grunge Nirvana, la 
           <form netlify class="container ">
             <div class="form-row arroba">
               <div class="col-8">
-                <input type="text" class="form-control" name="Nombre"
-                       placeholder="Nombre"
+                <input type="text" class="form-control" name="Nombre y Apellido"
+                       placeholder="Nombre y Apellido"
                        
                        >
               </div>
